--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildFeatures {
         dataBinding true
     }
@@ -37,5 +42,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'commons-net:commons-net:3.3'
+
+//    // ViewModel
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+//    // LiveData
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+//    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+//    implementation "android.arch.lifecycle:extensions:1.1.1"
+//    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
 }
