--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'commons-net:commons-net:3.3'
+
+    //Dagger
+    implementation "com.google.dagger:dagger:2.14.1"
+    implementation "com.google.dagger:dagger-android-support:2.14.1"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.14.1"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
 
 //    // ViewModel
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
